Fix import case sensitivity for Logic.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <script type="module" src="js/Main.js"></script>
     <script type="module">
-        import { initApp } from './js/logic.js';
+        import { initApp } from './js/Logic.js';
         initApp(); // Chạy hàm khởi tạo
     </script>
 
