--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
             </div>
 
         </div>
+
+        <button onclick="clearAppCache()" style="background:red; color:white;">🗑️ Xóa Cache Lỗi</button>
     </div>
 </div>
 
